# mimir

./: MimirInternal.hs  README.md  datatype.zp  internal.zp  mimir.cabal  mimir.zp  mimsql.zp  module.zp
priv/: MimirInternal.hs  internal.zp  mimsql-internal.zp  mimsql-stringify.zp  mimsql-types.zp
tests/: conf.zp  liteconf.zp
