name:                mimir
version:             0.0.2
author:              Veit Heller
maintainer:          veit@veitheller.de
description:         Mímir is a deity.
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     MimirInternal
  build-depends:       base > 4.9 && < 4.10,
                       containers,
                       convertible,
                       HDBC,
                       HDBC-mysql >= 0.7.0.0,
                       HDBC-postgresql,
                       HDBC-sqlite3,
                       zepto >= 0.9 && < 0.10
  default-language:    Haskell2010

